# resume-analyzer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Community Guidelines.txt  README.md  SECURITY.md  app.py  process.py  pyproject.toml  readme_documentation CONTRIBUTING.txt  requirements.txt
data/: combined_patterns.jsonl  degrees.csv  degrees.jsonl  job_title.csv  job_title.jsonl  skills.jsonl  skills_list.csv
data/JDs/: web_developer_job_description_sample.docx
data/Resumes/: web_developer_resume_sample.docx
resume_analyzer/: document_parsing.py  extraction.py  preprocessing.py  scoring.py  vectorization.py
static/: script.js  style.css
templates/: base.html  detail.html  index.html  result.html
utils/: create_jsonl.py  manage_job_titles.py
