[tool.poetry]
name = "resume-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.9.1"
pypdf2 = "^3.0.1"
python-docx = "^1.1.2"
spacy = "^3.8.2"
beautifulsoup4 = "^4.12.3"
contractions = "^0.1.73"
pandas = "^2.2.3"
flashtext = "^2.7"
scikit-learn = "^1.5.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
